# fxp2adg

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
data/: template.adg  template.xml
fxp2adg/: main.py
